# FERBioinformaticsNavarro

./: .gitignore  CMakeLists.txt  GfaGraph.cpp  GfaGraph.h  Navarrov_algoritam_za_približno_uspoređivanje_teksta_2020_.doc  Node.cpp  Node.h  README.md  main.cpp  main.h
GraphAligner/: CommonUtils.cpp  CommonUtils.h
dokumentacija/: Navarrov_algoritam_za_približno_uspoređivanje_teksta_2020.docx  Prezentacija_BioInf_Navarro.pptx
input/: example.fastq
input/data/results/: ref10000_linear.txt  ref10000_onechar.txt  ref10000_snp.txt  ref10000_summary.txt  ref10000_tangle.txt  ref10000_twopath.txt
input/data/tmp/: ref10000_simulatedreads.fastq  ref10000_snp.gfa  ref10000_tangle.gfa  ref10000_twopath.gfa
input/data2/results/: ref10000_linear.txt  ref10000_onechar.txt  ref10000_snp.txt  ref10000_summary.txt  ref10000_tangle.txt  ref10000_twopath.txt
input/data2/tmp/: ref10000_simulatedreads.fastq  ref10000_snp.gfa  ref10000_twopath.gfa
input/example/: example.gfa
input/jere/: ref10000_simulatedreads.fastq  ref10000_snp.gfa  ref10000_twopath.gfa
input/sego/: ref10000_linear.gfa  ref10000_simulatedreads.fastq  ref10000_tangle.gfa
nava/nava/navarro/: GfaGraph.cpp  Node.h  main.cpp  navarro.cpp  navarroGraph.cpp  pseudocode.txt  sm.cpp
nava/nava/navarro/input/: ref10000_simulatedreads.fastq  ref10000_snp.gfa  ref10000_twopath.gfa
navarro/: navarro.cpp  navarroGraph.cpp  navarroNode.cpp  navarroNode.h
results/: res_lin.txt  res_onechar.txt  res_snp.txt  res_summary.txt  res_tangle.txt  res_twopath.txt
simple-smith-waterman/: sm.cpp
